<resources>
    <string name="app_name">ChewStudio</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_statistic">Статистика</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_food">Питание</string>

    <!-- MainActivity -->
    <string name="content_main_text_view_user">Не выбрано</string>
    <string name="content_main_text_view_settings">Настройки</string>
    <string name="content_main_text_view_statistic">Статистика</string>
    <string name="content_main_text_view_information">Информация</string>
    <string name="content_main_button_food">Питание</string>

    <!-- SettingsActivity -->
    <string name="content_settings_text_mail">Не выбрано</string>
    <string name="content_settings_edit_information">Редактировать информацию</string>
    <string name="content_settings_text_view_user">Не выбрано</string>
    <string name="text_view_settings">Настройки</string>
    <string name="content_settings_button_notifications">Звуки и индикация</string>
    <string name="button_text_exit">Выход</string>
    <string name="button_text_gadget">Гаджет</string>
    <string name="button_text_account">Аккаунт</string>
    <string name="button_text_reset">Восстановить настройки</string>
    <string name="text_view_about">О программе</string>
    <string name="button_text_about_us">О нас</string>
    <string name="button_text_write_author">Обратная связь</string>
    <string name="content_settings_button_learning">Обучение</string>

    <string name="title_activity_edit_account_settings">Пользователь</string>
    <string name="content_settings_edit_text_user_name">Не выбрано</string>
    <string name="content_settings_biometric_data">Биометрические данные</string>
    <string name="content_settings_button_date_born">Дата рождения</string>
    <string name="content_settings_text_group_kr">Группа крови</string>
    <string name="content_settings_button_weigth">Вес</string>
    <string name="content_settings_text_rost">Рост</string>
    <string name="content_settings_text_address">Место жительства</string>
    <string name="content_main_text_health">Здоровье</string>
    <string name="content_settings_text_type_food">Тип питания</string>
    <string name="content_settings_text_crank">Заболевание</string>
    <string name="content_main_radio_button_male">Мужской</string>
    <string name="content_main_radio_button_female">Женский</string>
    <string name="content_settings_text_user_secname">Не выбрано</string>
    <string name="title_activity_gadget">Гаджет</string>
    <string name="content_settings_gadget">Настройки гаджета</string>
    <string name="content_settings_text_guyphone">Не выбрано</string>
    <string name="content_settings_gadget_mac">mac: -</string>
    <string name="content_settings_gadget_password">password: -</string>
    <string name="content_settings_change_gadget">Изменить</string>
    <string name="title_activity_change_gadget">Выбор гаджета</string>
    <string name="title_activity_learning">Обучение</string>
    <string name="content_main_checkbox_learning">Режим обучения</string>

    <string name="title_activity_notification">Звуки и индикация</string>
    <string name="content_settings_text_replace_food">Смена блюд</string>
    <string name="content_main_checkbox_text">Выводить текст</string>
    <string name="content_main_checkbox_sound">Звуковое оповещение</string>
    <string name="content_settings_text_learning">Режим обучениея</string>
    <string name="content_settings_radio_button_bipper">Биппер</string>
    <string name="content_settings_radio_button_melody">Мелодия</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="text_view_version">Версия 0.0.1</string>
    <string name="text_view_author">© 2016 Сауно.</string>
    <string name="text_view_rights_reserved">All rights reserved.</string>
    <string name="intent_builder_text_message">Ваше сообщение ...</string>
    <string name="intent_builder_text_title">Отправить сообщение</string>
    <string name="content_settings_text_count">Количество жеваний</string>

    <string name="view_navigation_open">Открыть</string>
    <string name="view_navigation_close">Закрыть</string>
    <string name="nav_menu_help">Помощь</string>
    <string name="nav_menu_mail">Обратная связь</string>
    <string name="nav_sub_more">Дополнительно</string>
    <string name="nav_item_access">Оценить</string>
    <string name="nav_item_about">О нас</string>
    <string name="content_settings_text_no_changed">Не выбрано</string>
    <string name="content_settings_text_weight">Вес</string>
    <string name="content_settings_text_input_group_krovi">Введите группу крови</string>
    <string name="content_settings_text_input_weigth">Введите вес</string>
    <string name="content_settings_text_input_rost">Введите рост</string>
    <string name="content_settings_text_input_address">Введите место проживания</string>
    <string name="content_settings_text_input_type_food">Введите тип питания</string>
    <string name="content_settings_text_input_crank">Введите заболевание</string>
    <string name="content_settings_text_save_settings">Настроойки успешно сохранены</string>
    <string name="content_settings_alert_dialog_title">Выход из аккаунта</string>
    <string name="content_settings_alert_dialog_message">Вы действительно хотите выйти?</string>

    <!-- FoodActivity -->
    <string name="text_view_food">Питание</string>
    <string name="content_food_button_local_menu">Местное меню</string>
    <string name="content_food_button_change_restaurant">Выбор ресторана</string>
    <string name="content_food_button_qr_menu">QR-меню</string>
    <string name="content_food_button_self_menu">Свое меню</string>


    <string name="title_activity_choose_menu">Выбор меню</string>

    <string name="list_view_item_morozh">Мороженое из саранчи</string>
    <string name="list_view_item_morozh_description">Работники магазина собрали цикад возле своих домов, затем сварили их, покрыли коричневым сахаром,
        молочным шоколадом и добавили в мороженое. Мороженое со вкусом цикад пришлось по вкусу покупателям. Лучшее спасение от летнего зноя.</string>
    <string name="list_view_item_syr_description">Сыр можно подавать как закуску к белому вину и для этого совершенно не обязательно делать канапе,
        можно просто нарезать его кусочками. Ни одна сытная запеканка не обходится без хрустящей золотистой корочки тертого сыра. </string>
    <string name="list_view_item_vyn_description">Виноград – ягода, используемая в сыром виде, а также в десертах и выпечке.
        Виноградный сок используется для изготовления других соков, различных напитков, желе и вина.</string>
    <string name="list_view_item_gamb_description">Этот вегетарианский гамбургер обеспечивает почти половину суточной потребности организма в клетчатке и обогащает организм необходимыми микроэлементами.</string>
    <string name="list_view_item_kofe_description">кофе помогает усваиванию пищи, для чего нужно предлагается чашечку этого напитка после обеда. Практикум Здорового Образа Жизни</string>
    <string name="list_view_item_free_description">Картофель – это важный источник калия, йода, железа, натрия и магния, а также витаминов В1, В2 и С.
        Немалая часть полезных веществ утрачивается в процессе приготовления и термической обработки.</string>
    <string name="list_view_item_apple_description">Сочные, вкусные райские яблоки очень любят в России. Они богаты витаминами, как все полезные овощи и фрукты. А главное — это лучшее украшение садов.</string>
    <string name="list_view_item_chay_description">Чай чесночный улун богат антиоксидантами, целым комплексом витаминов и минералов, а также в его состав входят кофеин, соединения полифенола и большое количество эфирных масел. </string>
    <string name="list_view_item_kasha_description">Манная каша хороша для поддержания ослабленных сил организма после перенесённых заболеваний, во время упадка сил или после нервных расстройств.</string>
    <string name="list_view_item_syr">Сыр березовый с мякотью</string>
    <string name="list_view_item_vyn">Виноград Якутский бриллиант</string>
    <string name="list_view_item_gam">Гамбургер из кукурузы и крапивных трюфелей</string>
    <string name="list_view_item_kofe">Кофе Ла-Рошель</string>
    <string name="list_view_item_kartofel">Картофель дьюти-фри</string>
    <string name="list_view_item_aple">Самурайские яблочки</string>
    <string name="list_view_item_tea">Чай чесночный улун</string>
    <string name="list_view_item_kash">Манная каша</string>

    <string name="action_optimal">Оптимальный</string>
    <string name="action_custom">В порядке выбора</string>
    <string name="content_settings_edit_text_user_name_hint">Фамилия</string>
    <string name="content_settings_text_user_secname_hint">Имя</string>
    <string name="content_choose_menu_button_text_start_eat">Начать кушать</string>

    <string name="calendar_fragment_text_title">Календарь</string>
    <string name="graphic_fragment_text_title">График</string>
    <string name="main_activity_tost_bluetooth_not_supported">Bluetooth не поддерживается на данном устройстве</string>
    <string name="fragment_graphic_statistic_checkbox_show_calories">Отображать калории</string>
    <string name="fragment_graphic_statistic_checkbox_show_proteins">Отображать белки</string>
    <string name="fragment_graphic_statistic_checkbox_show_fats">Отображать жиры</string>
    <string name="fragment_graphic_statistic_checkbox_show_carbohydrates">Отображать углеводы</string>
    <string name="fragment_graphic_statistic_text_view_change_date">Период: </string>
    <string name="title_activity_eat">Питание</string>
    <string name="content_eat_text_view_calories">Калории:</string>
    <string name="content_eat_text_view_proteins">Белки:</string>
    <string name="content_eat_text_view_fats">Жиры:</string>
    <string name="content_eat_text_view_carb">Углеводы:</string>
    <string name="content_eat_text_view_chews">Жевания:</string>
    <!-- / -->
</resources>
