<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_settings"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_food_button_local_menu"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_cellphone"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/content_settings_button_gadget"
                    android:onClick="buttonsListener"
                    android:enabled="false" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_food_button_change_restaurant"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_bell"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:onClick="buttonsListener"
                    android:id="@+id/content_settings_button_notifications"
                    android:enabled="false"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_food_button_qr_menu"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_account_box_outline"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:enabled="false"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_food_button_self_menu"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_arrange_bring_forward"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/content_settings_button_learning"
                    android:onClick="buttonsListener" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>