<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal"
            android:id="@+id/container">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_arrow_left"
                android:layout_marginTop="85dp"
                android:id="@+id/fragment_graphic_statistic_button_arrow_left"
                style="@style/ButtonTheme" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_weight="2"/>
            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginTop="85dp"
                android:id="@+id/fragment_graphic_statistic_button_arrow_right"
                style="@style/ButtonTheme"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_graphic_statistic_checkbox_show_calories"
                android:id="@+id/fragment_graphic_statistic_checkbox_show_calories"
                android:checked="true" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_graphic_statistic_checkbox_show_proteins"
                android:id="@+id/fragment_graphic_statistic_checkbox_show_proteins"
                android:checked="true" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_graphic_statistic_checkbox_show_fats"
                android:id="@+id/fragment_graphic_statistic_checkbox_show_fats"
                android:checked="true" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_graphic_statistic_checkbox_show_carbohydrates"
                android:id="@+id/fragment_graphic_statistic_checkbox_show_carbohydrates"
                android:checked="true" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_graphic_statistic_text_view_change_date"
            android:gravity="center"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>